--- a/imgui.ini
+++ b/imgui.ini
@@ -4,13 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][GridView]
-Pos=925,51
-Size=542,782
-Collapsed=0
-
-[Window][My Window]
-Pos=60,60
-Size=103,115
+ViewportPos=1395,145
+ViewportId=0x014F812C
+Size=372,599
 Collapsed=0
 
 [Docking][Data]
