--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][GridView]
-Pos=925,51
-Size=542,782
+ViewportPos=1296,187
+ViewportId=0x014F812C
+Size=374,690
 Collapsed=0
 
 [Window][My Window]
