--- a/GCSMav_control.vcxproj
+++ b/GCSMav_control.vcxproj
@@ -308,15 +308,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GCSMav_control.h" />
+    <ClInclude Include="GCS_UTM.h" />
     <ClInclude Include="GridView.h" />
     <ClInclude Include="UAV_MAV.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GCSMav_control.cpp" />
+    <ClCompile Include="GCS_UTM.cpp" />
     <ClCompile Include="GridView.cpp" />
-    <ClCompile Include="UAVControl.cpp" />
+    <ClCompile Include="UTM_APP.cpp" />
     <ClCompile Include="UAV_MAV.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
